[package]
name = "weirdimggen"
version = "0.1.0"
edition = "2021"

[dependencies]
image = "0.24"
rand = "0.8"
noise = "0.8"
rayon = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
candle-core = "0.8.2"
candle-nn = "0.8.2"
